--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Beetroot (Beta vulgaris)>
+  <title>Beetroot (Beta vulgaris)></title>
   <meta name="viewport"content="width=device-width,inital-scale=1">
 </head>
 <body>
@@ -10,11 +10,18 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
-        <li>Common varieties</li>
-        <li>Nutritional information</li>
-        <li>Tags</li>
-        <figure>
-          <img src="images/beets.jpeg" alt="">
-          <figcaption>A bundle of organic beets from a local farm co-op program.>
-        </figure>
-        <p>
+        <li><a href="a">Common varieties</a></li>
+        <li><a href="a">Nutritional information</a></li>
+        <li><a href="a">Tags</a></li>
+      </ol>
+    </nav>
+  </header>
+  <main>
+    <figure>
+      <img src="images/beets.jpg" alt="">
+      <figcaption>A bundle of organic beets from a local farm co-op program.</figcaption>
+    </figure>
+    <p>55 to 65 days are needed from germination to harvest of the root</p>
+  </main>
+</body>
+</html>
